<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title">

    <PreferenceCategory
        android:title="@string/pref_service" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="bootkick"
            android:persistent="true"
            android:title="@string/pref_boot_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keepservice"
            android:persistent="true"
            android:title="@string/pref_keepservice_title" />

        <com.remi.remidomo.common.views.CustomSpinnerPreference
            android:dialogTitle="@string/pref_storelimit_dialog"
            android:key="loglimit"
            android:persistent="true"
            android:summary="@string/pref_storelimit_summary"
            android:title="@string/pref_storelimit_title"
            app:defaultVal="365"
            app:max="1000"
            app:min="30" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_reseau" >

        <com.remi.remidomo.common.views.CustomSpinnerPreference
            android:dialogTitle="@string/pref_port_rfxlan"
            android:key="rfx_port"
            android:persistent="true"
            android:summary="@string/pref_port_summary"
            android:title="@string/pref_port_rfxlan"
            app:defaultVal="1234"
            app:max="65535"
            app:min="1024" />
        <com.remi.remidomo.common.views.CustomSpinnerPreference
            android:dialogTitle="@string/pref_port_serveur"
            android:key="port"
            android:persistent="true"
            android:summary="@string/pref_port_summary"
            android:title="@string/pref_port_serveur"
            app:defaultVal="1234"
            app:max="65535"
            app:min="1024" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sncf" >

        <ListPreference
            android:defaultValue="GOC"
            android:entries="@array/gares"
            android:entryValues="@array/garesValues"
            android:key="gare"
            android:persistent="true"
            android:summary="@string/pref_gare_summary"
            android:title="@string/pref_gare_title" />

        <com.remi.remidomo.common.views.CustomSpinnerPreference
            android:dialogTitle="@string/pref_poll_dialog"
            android:inputType="number"
            android:key="sncf_poll"
            android:persistent="true"
            android:summary="@string/pref_poll_summary"
            android:title="@string/pref_poll_title"
            app:defaultVal="15"
            app:max="500"
            app:min="5" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_meteo" >

        <com.remi.remidomo.common.views.CustomSpinnerPreference
            android:dialogTitle="@string/pref_meteo_dialog"
            android:key="meteo_poll"
            android:persistent="true"
            android:summary="@string/pref_meteo_summary"
            android:title="@string/pref_meteo_title"
            app:defaultVal="4"
            app:max="12"
            app:min="1" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notifications" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notif_sound"
            android:persistent="true"
            android:summaryOff="@string/pref_sound_summary_off"
            android:summaryOn="@string/pref_sound_summary_on"
            android:title="@string/pref_sound_title" />

        <Preference
            android:title="@string/pref_sound_garage"
            android:key="sound_garage"/>

        <Preference
            android:title="@string/pref_sound_alert"
            android:key="sound_alert"/>

    </PreferenceCategory>

</PreferenceScreen>