<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.remi.remidomo.reloaded"
    android:title="@string/pref_sncf"
    android:icon="@drawable/pref_train">

    <ListPreference
        android:defaultValue="GOC"
        android:entries="@array/gares"
        android:entryValues="@array/garesValues"
        android:key="gare"
        android:persistent="true"
        android:summary="@string/pref_gare_summary"
        android:title="@string/pref_gare_title" />

    <com.remi.remidomo.reloaded.CustomSpinnerPreference
        android:dialogTitle="@string/pref_poll_dialog"
        android:inputType="number"
        android:key="sncf_poll"
        android:persistent="true"
        android:summary="@string/pref_poll_summary"
        android:title="@string/pref_poll_title"
        app:defaultVal="15"
        app:max="500"
        app:min="5" />

</PreferenceScreen>
