<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.remi.remidomo.server.prefs.PrefsService"
        android:icon="@drawable/pref_network"
        android:title="@string/pref_service" >
    </header>

    <header
        android:fragment="com.remi.remidomo.common.prefs.PrefsGeneral"
        android:icon="@drawable/pref_general"
        android:title="@string/pref_general" >
    </header>
    
    <header
        android:fragment="com.remi.remidomo.common.prefs.PrefsTrain"
        android:icon="@drawable/pref_train"
        android:title="@string/pref_sncf" >
    </header>

    <header
        android:fragment="com.remi.remidomo.common.prefs.PrefsMeteo"
        android:icon="@drawable/pref_meteo"
        android:title="@string/pref_meteo" >
    </header>

    <header
        android:fragment="com.remi.remidomo.common.prefs.PrefsNotif"
        android:icon="@drawable/pref_notif"
        android:title="@string/pref_notifications" >
    </header>

</preference-headers>
